	              formats) can be displayerd. Geocentric coordinates are
	              converted into Topocentric.
	            - Added tracking file conversion HORIZONS --> TSC.
	            - Added Drawing Non-sidereal orbit on FC.
	            - Fixed a bug in CheckTargetDefOPE(). [Merge OPE crush].
	            - Bug Fix on "calcpa2_main() instead of calcpa2_skymon()
	              in SET mode.

2017.06.10 ver2.9.4 - Fixed a bug in unchunk() [Win32].
	            - Changed vizier server to Strasbourg (nao.ac.jp mirror
	              could be troubled in the summit LAN).
	            - Removed main_iteration(FALSE) in draw_fc_cairo
	              to fix the FC resize problem in Win64.
	            - Bug fix on gmt offset calc in AllSky Camera time stamp.
	            - Added Font Size setup for all Cairo character rendering.
	            - Moon Sep. in ObjList is changed to ON in default.
	            - Fixed GAIA DR1 position epoch 2000 -> 2015 for proper
	              motion calculation.

2017.06.01 ver2.9.3 - Added "Add Object" menu in main menu.
	            - Added GAIA DR1/2MASS for database query in FC.
	            - Revised unchunk code (g_malloc base).
	            - Some adjustments for public release.
	            - Adjusted for gtkmacintegration in OSX version to
	              display the menu in OSX menu bar.
	            - removed screen_changed() in drawing_area operation
	              to avoid the window resize failure on OSX.

2017.05.17 ver2.9.2 - Added "Add" button in FCDB/Standard treeview panels
	              to add a selected object into the object tree.
	            - Added "File/Export to/OPE Def." and "Text List" in
	              main menu to save the current object list into an OPE
	              definition or a CSV text file.

2017.05.16 ver2.9.1 - Added GSC 2.3/PanSTARRS-1/SDSS/USNO-B for database
	              query in FC.
	              These can be used for IRCS Tip-Tilt GS selection.